# Loom

./: .gitignore  CLAUDE.md  MEMORY.md  plan.md  pyproject.toml
docs/superpowers/plans/: 2026-06-15-differentiable-synth-engine.md  2026-06-15-effects-chain-expansion.md  2026-06-15-wavetable-fm-oscillators.md  2026-06-16-encoder-v2.md  2026-06-16-lfo-sequencer.md  2026-06-16-sinkhorn-effects-routing.md  2026-06-16-timbre-test-framework.md  2026-06-16-time-varying-modulation.md
docs/superpowers/specs/: 2026-06-15-differentiable-synth-engine-design.md  2026-06-15-effects-chain-expansion-design.md  (+7 more)
memory/: flow-matching-experiment-lessons.md
scripts/: debug_params.py  demo.py  demo_flow.py  find_max_batch.py  gradient_analysis.py  param_recovery.py  profile_training.py  render_demo_audio.py  smoke_test_curriculum.py  smoke_test_v100.py  test_classic_timbres.py
src/loom/: __init__.py  amplifier.py  core.py  envelope.py  filters.py  fm.py  lfo.py  oscillators.py  render.py  sequencer.py  svfilter.py  synth.py  wavetable.py
tests/: conftest.py  test_amplifier.py  test_chorus.py  test_compressor.py  test_delay.py  test_distortion.py  test_effects_chain.py  test_envelope.py  test_eq.py  test_filters.py  test_fm.py  test_gradients.py  test_lfo.py  test_oscillators.py  test_preset_synth.py  test_preset_waveforms.py  test_reverb.py  test_sequencer.py  test_svfilter.py  test_synth.py  test_timbre_helpers.py  test_timbres_effects.py  test_timbres_envelope.py  test_timbres_filter.py  test_timbres_osc.py  test_timbres_presets.py  test_wavetable.py  timbre_helpers.py
(+21 files in other folders)
