[project]
name = "loom"
version = "0.1.0"
description = "Differentiable synthesis engine for audio reverse engineering"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
